--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
     <section id="about">
       <h2>About This Page</h2>
-      <p>This is a simple page for testing HTML, CSS, and JavaScript functionality.</p>
+      <p>This is a simple page for test HTML, CSS, and JavaScript functionality.</p>
     </section>
 
     <section id="form">
